syntax = "proto2";

package jumanpp;

message JumanSentence {
  repeated JumanMorpheme morphemes = 1;
  optional string comment = 2;
}

message JumanMorpheme {
  required string surface = 1;
  required string reading = 2;
  required string baseform = 3;
  required JumanPos posInfo = 4;
  repeated JumanFeature features = 5;
  optional JumanStringPos string_pos = 6;
  repeated JumanMorpheme variants = 20;
}

message JumanPos {
  required uint32 pos = 1;
  required uint32 subpos = 2;
  required uint32 conj_type = 3;
  required uint32 conj_form = 4;
}

message JumanStringPos {
  required string pos = 1;
  required string subpos = 2;
  required string conj_type = 3;
  required string conj_form = 4;
}

message JumanFeature {
  required string key = 1;
  optional string value = 2;
}